--- a/.github/workflows/pr_ci.yml
+++ b/.github/workflows/pr_ci.yml
@@ -1,7 +1,7 @@
-name: PR CI
+name: Continuous Deployment
 
 on:
-  pull_request:
+  push:
     branches:
     - master
 
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -20,11 +20,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
+    - name: npm install, dist
       run: |
         npm install
-        npm run lint
-        npm test
-        npm run build
+        npm run dist
       env:
         CI: true
